launchpad-buildd (234) UNRELEASED; urgency=medium

  * Add basic documentation of malware scanning for CI builds.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 06 Jun 2023 11:42:23 +0100

launchpad-buildd (233) focal; urgency=medium

  * Only create /dev/dm-* in LXD containers if they don't already exist
    (fixes devtmpfs-related failures on riscv64).

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 01 Jun 2023 08:24:53 +0100

launchpad-buildd (232) focal; urgency=medium

  [ Colin Watson ]
  * Drop dependency on apt-transport-https; HTTPS support is integrated into
    apt these days.

  [ Steve Langasek ]
  * Mount devtmpfs in the lxd container, to make losetup -P work.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 24 May 2023 18:23:02 +0100

launchpad-buildd (231) focal; urgency=medium

  * Only ignore .bzr and .git when building source packages from recipes,
    not all the things that "dpkg-buildpackage -I" ignores.
  * Use lpci rather than lpcraft, following its rename.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 18 Apr 2023 18:05:50 +0100

launchpad-buildd (230) focal; urgency=medium

  * Apply black and isort.
  * Enforce shellcheck in pre-commit.
  * Add an option to disable the proxy after the "pull" phase of a snap
    recipe build.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 10 Feb 2023 18:22:21 +0000

launchpad-buildd (229) focal; urgency=medium

  * Call dpkg-architecture with -a rather than setting DEB_HOST_ARCH, to
    avoid a warning if gcc isn't installed.
  * Prevent the kernel from killing launchpad-buildd if it runs out of
    memory.
  * Restructure lxd group membership handling to avoid requiring the lxd
    snap to be installed at postinst time.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 31 Jan 2023 12:34:34 +0000

launchpad-buildd (228) focal; urgency=medium

  * In CI jobs, chown the VCS tree to buildd:buildd after fetching it, since
    otherwise lpcraft running as the buildd user can't read its .git
    directory.
