@@ -46,8 +46,6 @@ class BuildSnap(
 ):
     description = "Build a snap."
 
-    core_snap_names = ["core", "core16", "core18", "core20", "core22"]
-
     @classmethod
     def add_arguments(cls, parser):
         super().add_arguments(parser)
@@ -57,10 +55,7 @@ class BuildSnap(
             metavar="SNAP=CHANNEL",
             dest="channels",
             default={},
-            help=(
-                f"install SNAP from CHANNEL (supported snaps: "
-                f"{', '.join(cls.core_snap_names)}, snapcraft)"
-            ),
+            help="install SNAP from CHANNEL",
         )
         parser.add_argument(
             "--build-request-id",
@@ -154,15 +149,10 @@ class BuildSnap(
         self.backend.run(["apt-get", "-y", "install"] + deps)
         if self.backend.supports_snapd:
             self.snap_store_set_proxy()
-        for snap_name in self.core_snap_names:
-            if snap_name in self.args.channels:
+        for snap_name, channel in sorted(self.args.channels.items()):
+            if snap_name != "snapcraft":
                 self.backend.run(
-                    [
-                        "snap",
-                        "install",
-                        "--channel=%s" % self.args.channels[snap_name],
-                        snap_name,
-                    ]
+                    ["snap", "install", "--channel=%s" % channel, snap_name]
                 )
         if "snapcraft" in self.args.channels:
             self.backend.run(
